# claude-code-publish

./: PR.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/claude_code_publish/: __init__.py
src/claude_code_transcripts/: __init__.py  code_view.py
src/claude_code_transcripts/templates/: base.html  code.html  code_view.html  code_view.js  header.html  index.html  macros.html  page.html  project_index.html  scripts.js  search.js  styles.css
tests/: test_all.py  test_batch.py  test_code_view.py  test_code_view_e2e.py  test_generate_html.py  test_playwright.py
tests/__snapshots__/test_generate_html/: TestGenerateHtml.test_generates_index_html.html  TestGenerateHtml.test_generates_page_001_html.html  TestGenerateHtml.test_generates_page_002_html.html  TestParseSessionFile.test_jsonl_generates_html.html  TestRenderContentBlock.test_tool_result_block.html  TestRenderContentBlock.test_tool_result_content_block_array.html  TestRenderContentBlock.test_tool_result_content_block_array_with_image.html  TestRenderContentBlock.test_tool_result_content_block_array_with_tool_use.html  TestRenderContentBlock.test_tool_result_error.html  TestRenderContentBlock.test_tool_result_with_ansi_codes.html  TestRenderContentBlock.test_tool_result_with_commit.html  TestRenderFunctions.test_render_bash_tool.html  TestRenderFunctions.test_render_edit_tool.html  TestRenderFunctions.test_render_edit_tool_replace_all.html  TestRenderFunctions.test_render_write_tool.html
